Quite la diagonal de la ruta de imagenes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="card">
         <div class="product">
           <img
-            src="/images/image-product-desktop.jpg"
+            src="./images/image-product-desktop.jpg"
             alt="Image of a perfume"
           />
         </div>
@@ -36,7 +36,7 @@
             <p>$169.99</p>
           </div>
           <div class="btn">
-            <img src="/images/icon-cart.svg" alt="" />
+            <img src="./images/icon-cart.svg" alt="" />
             <p>Add to Cart</p>
           </div>
         </div>
